--- a/app/base/templates/accounts/register.html
+++ b/app/base/templates/accounts/register.html
@@ -11,7 +11,7 @@
 				<div class="row align-items-center text-center">
 					<div class="col-md-12">
 						<div class="card-body">
-							<img src="/static/assets/images/logo-dark.png" alt="" class="img-fluid mb-4">
+<!--							<img src="/static/assets/images/logo-dark.png" alt="" class="img-fluid mb-4">-->
 							<h4 class="mb-3 f-w-400">
 								Sign UP
 							</h4>
@@ -64,9 +64,9 @@
 
 							<p class="mb-2 text-muted">
 								<br />
-								&copy; <a target="_blank" rel="noopener" href="https://bit.ly/37fF9RT" class="f-w-400">CodedThemes</a>
-								- <a target="_blank" rel="noopener" 
-								     href="https://appseed.us/admin-dashboards/flask-dashboard-gradientable" class="f-w-400">Flask Gradient</a>
+<!--								&copy; <a target="_blank" rel="noopener" href="https://bit.ly/37fF9RT" class="f-w-400">CodedThemes</a>-->
+<!--								- <a target="_blank" rel="noopener" -->
+<!--								     href="https://appseed.us/admin-dashboards/flask-dashboard-gradientable" class="f-w-400">Flask Gradient</a>-->
 							</p>
 
 						</div>
