--- a/app/base/templates/accounts/login.html
+++ b/app/base/templates/accounts/login.html
@@ -12,7 +12,7 @@
 					<div class="col-md-12">
 						<div class="card-body">
 
-							<img src="/static/assets/images/logo-dark.png" alt="" class="img-fluid mb-4">
+<!--							<img src="/static/assets/images/logo-dark.png" alt="" class="img-fluid mb-4">-->
 							<h4 class="mb-3 f-w-400">
 								Sign IN
 							</h4>
@@ -54,9 +54,9 @@
 							<p class="mb-0 text-muted">Don’t have an account? <a href="{{ url_for('base_blueprint.register') }}" class="f-w-400">Signup</a></p>
 							<p class="mb-2 text-muted">
 								<br />
-								&copy; <a target="_blank" rel="noopener" href="https://bit.ly/37fF9RT" class="f-w-400">CodedThemes</a>
-								- <a target="_blank" rel="noopener" 
-								     href="https://appseed.us/admin-dashboards/flask-dashboard-gradientable" class="f-w-400">Flask Gradient</a>
+<!--								&copy; <a target="_blank" rel="noopener" href="https://bit.ly/37fF9RT" class="f-w-400">CodedThemes</a>-->
+<!--								- <a target="_blank" rel="noopener"-->
+<!--								     href="https://appseed.us/admin-dashboards/flask-dashboard-gradientable" class="f-w-400">Flask Gradient</a>-->
 							</p>
 						</div>
 					</div>
