--- a/app/base/templates/includes/navigation.html
+++ b/app/base/templates/includes/navigation.html
@@ -21,7 +21,7 @@
                 <a href="#!" class="pop-search"><i class="feather icon-search"></i></a>
                 <div class="search-bar">
                     <form method="post" action="/search/" name="search_form">
-                        <input type="text" class="form-control border-0 shadow-none" id="autocomplete_id" name="search_name"
+                        <input type="text" class="form-control border-0 shadow-none" id="search" name="search"
                                placeholder="Search here">
                     </form>
                     <button type="button" class="close" aria-label="Close">
