--- a/app/base/templates/layouts/base.html
+++ b/app/base/templates/layouts/base.html
@@ -24,15 +24,11 @@
     <link rel="icon" href="/static/assets/images/favicon.ico" type="image/x-icon">
 
     <!-- vendor css -->
-<!--    <link rel="stylesheet" href="/static/assets/css/style.css">-->
-
+    <link rel="stylesheet" href="/static/assets/css/style.css">
+    <link rel="stylesheet" href="/static/assets/css/autocomplete.css">
     <!-- Specific CSS goes HERE -->
     {% block stylesheets %}
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     {% endblock stylesheets %}
-
-
-
 
 
 </head>
@@ -56,10 +52,6 @@
 
 <!-- Specific Page JS goes HERE  -->
 {% block javascripts %}
- <!-- Javascript -->
-
-
-
 {% endblock javascripts %}
 
 </body>
