Adding search list from yahoo

--- a/app/base/templates/includes/navigation.html
+++ b/app/base/templates/includes/navigation.html
@@ -20,7 +20,7 @@
             <li class="nav-item">
                 <a href="#!" class="pop-search"><i class="feather icon-search"></i></a>
                 <div class="search-bar">
-                    <form method="post" action="/search/" name="search_form">
+                    <form method="post" action="/search" id="search_form" name="search_form">
                         <input type="text" class="form-control border-0 shadow-none" id="search" name="search"
                                placeholder="Search here">
                     </form>
