--- a/app/base/templates/layouts/base.html
+++ b/app/base/templates/layouts/base.html
@@ -25,7 +25,7 @@
 
     <!-- vendor css -->
     <link rel="stylesheet" href="/static/assets/css/style.css">
-    <link rel="stylesheet" href="/static/assets/css/autocomplete.css">
+<!--    <link rel="stylesheet" href="/static/assets/css/autocomplete.css">-->
     <!-- Specific CSS goes HERE -->
     {% block stylesheets %}
     {% endblock stylesheets %}
