--- a/app/home/templates/stock.html
+++ b/app/home/templates/stock.html
@@ -2027,10 +2027,10 @@
 <!-- Specific Page JS goes HERE  -->
 {% block javascripts %}
 
-<!-- custom js -->
-<script src="/static/assets/js/pages/stock.js"></script>
+<
 <!-- Apex Chart -->
 <script src="/static/assets/js/plugins/apexcharts.min.js"></script>
 {% include 'includes/stock-chart.html' %}
-
+!-- custom js -->
+<script src="/static/assets/js/pages/stock.js"></script>
 {% endblock javascripts %}
