--- a/app/base/templates/includes/navigation.html
+++ b/app/base/templates/includes/navigation.html
@@ -4,12 +4,11 @@
 
     <div class="m-header">
         <a class="mobile-menu" id="mobile-collapse" href="#!"><span></span></a>
-        <a href="#!" class="b-brand">
+        <span class="f-18"><i class="feather icon-trending-up"></i> myCourtier</span>
             <!-- ========   change your logo hear   ============ -->
             <!--                <img src="/static/assets/images/logo.png" alt="" class="logo">-->
             <!--                <img src="/static/assets/images/logo-icon.png" alt="" class="logo-thumb">-->
-            myCourtier
-        </a>
+
         <a href="#!" class="mob-toggler">
             <i class="feather icon-more-vertical"></i>
         </a>
