--- a/app/base/templates/includes/scripts.html
+++ b/app/base/templates/includes/scripts.html
@@ -1,27 +1,5 @@
 <script src="/static/assets/js/vendor-all.min.js"></script>
 <script src="/static/assets/js/plugins/bootstrap.min.js"></script>
 <script src="/static/assets/js/pcoded.min.js"></script>
+<script src="/static/assets/js/common.js"></script>
 <!--<script src="/static/assets/js/plugins/jquery-ui.min.js"></script>-->
-<script>
-$(document).ready(function () {
-    /*$(function() {
-        var availableTutorials  =  [
-           "ActionScript",
-           "Bootstrap",
-           "C",
-           "C++",
-        ];
-        $( "#search" ).autocomplete({
-           source: '/autocomplete'
-        });
-    });*/
-
-
-    $("#search").keyup(function(event) {
-      if (event.which === 13) {
-        $('search_form').submit();
-        return false;
-      }
-    });
-});
-</script>
