--- a/app/base/templates/layouts/base-fullscreen.html
+++ b/app/base/templates/layouts/base-fullscreen.html
@@ -42,7 +42,9 @@
     {% include 'includes/scripts.html' %}
 
     <!-- Specific Page JS goes HERE  -->
-    {% block javascripts %}{% endblock javascripts %} 
+    {% block javascripts %}
+    <script src="/static/assets/js/common.js"></script>
+    {% endblock javascripts %}
 
 </body>
 </html>
