adding pytrend jquery late load

--- a/app/home/templates/includes/stock-chart.html
+++ b/app/home/templates/includes/stock-chart.html
@@ -25,8 +25,12 @@ $(document).ready(function() {
                     forceNiceScale: true,
                     label: {
                         show: true,
+                        position: 'right',
                         text: '200 Days Av.',
-                        align: 'left',
+                        align: 'right',
+                        offsetX: -5,
+                        borderWidth: 0,
+                        borderRadius: 0,
                         style: {
                             color: "#fff",
                             background: '#00E396'
@@ -38,7 +42,11 @@ $(document).ready(function() {
                     borderColor: '#999',
                     label: {
                         show: true,
-                        align: 'left',
+                        position: 'right',
+                        align: 'right',
+                        offsetX: -5,
+                        borderWidth: 0,
+                        borderRadius: 0,
                         text: '50 Days Av.',
                         style: {
                             color: "#fff",
