--- a/app/base/templates/includes/navigation.html
+++ b/app/base/templates/includes/navigation.html
@@ -108,13 +108,10 @@
             <li>
                 <div class="dropdown drp-user">
                     <a href="#!" class="dropdown-toggle" data-toggle="dropdown">
-                        <img src="/static/assets/images/user/avatar-1.jpg" class="img-radius wid-40"
-                             alt="User-Profile-Image">
+                        <span class="f-20"><i class="icon feather icon-user"></i></span>
                     </a>
                     <div class="dropdown-menu dropdown-menu-right profile-notification">
                         <div class="pro-head">
-                            <img src="/static/assets/images/user/avatar-1.jpg" class="img-radius"
-                                 alt="User-Profile-Image">
                             <span>
                                     {{ current_user.username }}
                                 </span>
@@ -123,8 +120,7 @@
                             </a>
                         </div>
                         <ul class="pro-body">
-                            <li><a href="#" class="dropdown-item"><i class="feather icon-user"></i> Profile - {{
-                                current_user.username }} </a></li>
+                            <li><a href="#" class="dropdown-item"><i class="feather icon-user"></i> Profile </a></li>
                         </ul>
                     </div>
                 </div>
