--- a/app/base/templates/includes/scripts.html
+++ b/app/base/templates/includes/scripts.html
@@ -1,5 +1,6 @@
 <script src="/static/assets/js/vendor-all.min.js"></script>
 <script src="/static/assets/js/plugins/bootstrap.min.js"></script>
 <script src="/static/assets/js/pcoded.min.js"></script>
+<script src="/static/assets/js/plugins/apexcharts.min.js"></script>
 <script src="/static/assets/js/common.js"></script>
 <!--<script src="/static/assets/js/plugins/jquery-ui.min.js"></script>-->
